--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -147,6 +147,14 @@
                 android:layout_marginTop="10dp"
                 android:text="随机棋盘"
                 android:textColor="@color/colorAccent" />
+
+            <TextView
+                android:id="@+id/switch_kugou_column"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="仿酷狗PC客户端双层柱状"
+                android:textColor="@color/colorAccent" />
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
