新增柱状波形图

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -117,6 +117,14 @@
                 android:textColor="@color/colorAccent" />
 
             <TextView
+                android:id="@+id/switch_wave_column_form"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="柱状声波"
+                android:textColor="@color/colorAccent" />
+
+            <TextView
                 android:id="@+id/switch_circle_round"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
